--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,187 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  font-family: Playfair Display, 'Times New Roman', Times, serif;
+  margin: 0;
+  padding: 0;
+}
+body{
+  background-image: url('./components/img/background.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: max-content;
+}
+.container{
+  max-width: 80%;
+  margin: auto;
+}
+a{
+  text-decoration: none;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+nav a{
+  color: #fff;
+  font-weight: 400;
+}
+nav a:hover{
+  text-decoration: underline;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+nav ul li{
+  list-style: none;
+  padding: 10px;
+}
+nav ul li:last-child{
+  padding: 10px 0px 10px 10px;
+}
+input{
+  display: block;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #939AA4;
+  border-bottom: 2px solid #fff;
+  font-size: 36px;
+}
+input::placeholder{
+  font-size: 36px;
+}
+.showcase{
+  width: 75%;
+  margin: 15% auto 10px auto;
+}
+.showcase-content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+.showcase-content h1{
+  align-self: flex-start;
+  color: #fff;
+  margin: 10px 0;
+  font-size: 48px;
+  font-weight: 400;
+}
+button, input[type=submit]{
+  background-color: #CF9809;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  font-size: 36px;
+}
+button:hover, input[type=submit]:hover{
+  background-color: #a57702;
+  cursor: pointer;
+  transition: ease .3s background-color;
+}
+.showcase-content button, input[type=submit]{
+  width: 25%;
+  margin: 20px auto;
+}
+.prayers{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.prayers h4, .prayer1 p{
+  margin: 10px 0;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 400;
+  animation: fadein .5s ease;
+}
+.showcase h2{
+  align-self: flex-start;
+  color: #fff;
+  margin: 10px 0;
+  font-size: 36px;
+  font-weight: 400;
+}
+.prayer{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px 0 0;
+  animation: fadein .5s ease;
+}
+.prayer2, .prayer1{
+  display: flex;
+  flex-direction: column;
+  animation: fadein .5s ease;
+}
+.hadis{
+  width: 50%;
+  color: #fff;
+  padding: 0 0 0 20px;
+}
+.hadis p{
+  font-size: 22px;
+}
+.clear{
+  clear: both;
+  height: 20vh;
+}
+.about h1{
+  text-align: center;
+  padding: 10px 0;
+  font-weight: 400;
+  font-size: 48px;
+}
+.about{
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+.about p{
+  font-size: 24px;
+}
+.creators{
+  display: flex;
+  flex-direction: column;
+}
+.creators h2{
+  padding: 15px 0;
+  font-weight: 400;
+  font-size: 36px;
+}
+.creator-profile{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
+}
+.creator{
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+}
+.creator-img{
+  width: 25%;
+}
+.creator-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 15px;
+}
+img{
+  width: 100%;
+}
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: #000;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #CF9809;
 }
